# topics_in_djangorestframework

./: README.md  git.md  git_flash.sh  hello.py  pyproject.toml  readme.md  send_git.sh
celery/: readme.md
celery/celery_1/: readme.md
celery/celery_2/: readme.md
celery/celery_django_1/: readme.md
celery/drf_celery_medicine/: readme.md
commands/: readme.md
docker/: Dockerfile  readme.md
git/: git.md
jwt/: asymmetric.py  code1.py  code2.py  symmetric.py
keycloak/saulo_roncon/: Keycloak API.postman_collection.json  docker-compose.yaml  saulo_roncon.md
logging/: readme.md
orm/: readme.md
poetry/: readme.md
poetry/my_project/: pyproject.toml  requirements.txt
poetry/my_project/my_project/: main.py
postgres/: postgres.md
pre-commit/: readme.md
prefetch_related/: readme.md
project_1_actions/: readme.md
pytest/: readme.md
serializer/: a.py
uv/: uv.md
vpn/: acesso_remoto_VPN_catalunha.ovpn  readme.md
